Fixed bug with whylines stretching favelist width
Former-commit-id: c6f01286eb21db4e223071baef81decf6696ed9e

--- a/war/Fave100.css
+++ b/war/Fave100.css
@@ -256,7 +256,7 @@ footer {
 	
 }
 
-.whyLinePanel {
+.whyLinePanelEmpty {
 	white-space: pre;
 }
 .whyLinePanel:hover {
